--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,7 @@ sudo: false
 cache: bundler
 rvm:
   - 1.9.3
-  - 2.0.0
-  - 2.1.7
-  - 2.2.3
-  - jruby-19mode
-  - rbx-2.5.8
+  - ruby-head
+  - jruby-head
 script:
   bundle exec rspec
-
