--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,12 @@ coverage
 rdoc
 pkg
 
+# for a library or gem, you might want to ignore these files since the code is
+# intended to run in multiple environments; otherwise, check them in:
+Gemfile.lock
+.ruby-version
+.ruby-gemset
+
 ## PROJECT::SPECIFIC
 
 ## RubyGems
